--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -5,12 +5,19 @@
     <string name="info_text">Aplicación creada para el Proyecto Integrado Curso 2023-2024</string>
     <string name="title_activity_filters">activity_filters</string>
     <string-array name="companhiasArray">
-        <item>REPSOL</item>
+        <item>REPSOL - ibil (ES)</item>
         <item>TESLA</item>
         <item>IBERDROLA</item>
         <item>IONITY</item>
         <item>ZUNDER</item>
         <item>WENEA</item>
+        <item>ENDESA</item>
+        <item>Telepark (Empark)</item>
+        <item>CEPSA (ES)</item>
+        <item>Renault</item>
+        <item>Mercadona</item>
+        <item>Lidl</item>
+        <item>EDP</item>
     </string-array>
 
 </resources>
