--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
         <item>Lidl</item>
         <item>EDP</item>
     </string-array>
+    <string-array name="tiposOrdenacion">
+        <item>Potencia</item>
+    </string-array>
 
 </resources>
