--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@
         <item>EDP</item>
     </string-array>
 
+    <string-array name="criteriosArray">
+        <item>POTENCIA</item>
+    </string-array>
+
 </resources>
