Implementar Ordenar Potencia v1

--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
         <item>Potencia</item>
     </string-array>
 
+    <string-array name="criteriosArray">
+        <item>POTENCIA</item>
+    </string-array>
+
 </resources>
