--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     </string-array>
 
     <string-array name="criteriosArray">
+        <item>NINGUNO</item>
         <item>POTENCIA</item>
     </string-array>
 
