Anhadir implementacion visual

--- a/AndroidProject/app/src/main/res/values/strings.xml
+++ b/AndroidProject/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string-array name="criteriosArray">
         <item>NINGUNO</item>
         <item>POTENCIA</item>
+        <item>COSTE TOTAL</item>
     </string-array>
 
 </resources>
